--- a/profile.css
+++ b/profile.css
@@ -131,8 +131,8 @@ table {
         grid-template-columns: 0.4fr 2fr 0.1fr 2fr 0.4fr; 
         grid-template-rows: 2fr; 
         gap: 0px 0px; 
-        padding-left:80px;
-        padding-right:80px;
+        padding-left:70px;
+        padding-right:70px;
         grid-template-areas: 
           ". profile-img . fun-facts ."; 
       }
@@ -165,11 +165,15 @@ table {
 
       .bio {
         font-weight: bold;
-        margin-bottom: 2rem;
+        background: white;
+        padding: 2rem;
+        background: rgba(255, 255, 255, 0.3);
       }
 
       .bio-info {
           line-height: 2;
+          background: rgba(255, 255, 255, 0.3);
+          padding: 2rem;
       }
 
       .asb {
@@ -251,6 +255,10 @@ table {
     .footer-info {
         font-size: 80%;
     }
+    .biography {
+        padding-left:20px;
+        padding-right:20px;
+    
 
        
 }
@@ -260,6 +268,12 @@ table {
         padding-left:20px;
         padding-right:20px;
     }
+
+    .biography {
+        padding-left:20px;
+        padding-right:20px;
+    }
+
 
     .icon {
         width: 15px;
